versioned_docs/version-0.10/cloud/deploy-from-terminal.mdx
---
title: Deploy Applications from your Terminal
description: You can launch Kubernetes applications directly from your terminal
sidebar_label: From Your Terminal
id: deploy-from-terminal
---

import Image from '@theme/Image';

You have full access to your Kubernetes namespaces on Okteto Cloud directly from your terminal, using the tools you're already familiar with, such as `helm`, `kubectl`, `okteto` or `skaffold`.

## Download your Kubernetes credentials

In order to access your namespaces from your terminal, download your Kubernetes credentials from Okteto Cloud.
[This document](/docs/0.10/cloud/credentials/) will walk you through the necessary steps for this.

## Deploy your Application

Once the credentials have been configured, deploy your applications using your favorite CLI tool.
For example, you could use `kubectl` to deploy our `hello-world` application:

```terminal
kubectl apply -f https://raw.githubusercontent.com/okteto/go-getting-started/master/k8s.yml
```

Okteto Cloud is a multi-tenant environment.
A combination of RBAC, pod security policies, resource quotas, network policies, admission controllers, and custom code is put in-place to ensure that Okteto Cloud namespaces are isolated, secure, and easy to use for everyone.
[Take a look at this document](/docs/0.10/cloud/multitenancy/) to understand the limitations and restrictions most likely to affect your applications in Okteto Cloud.
