versioned_docs/version-0.12/cloud/deploy-from-terminal.mdx
---
title: Deploy Applications from your Terminal
description: You can launch Kubernetes applications directly from your terminal
sidebar_label: From Your Terminal
id: deploy-from-terminal
---

import Image from '@theme/Image';

You have full access to your Kubernetes namespaces on Okteto directly from your terminal, using the tools you're already familiar with, such as `helm`, `kubectl`, `okteto` or `skaffold`.

## Download your Kubernetes credentials

In order to access your namespaces from your terminal, download your Kubernetes credentials from Okteto.
[This document](/docs/cloud/credentials/) will walk you through the necessary steps for this.

You can also use the `okteto kubeconfig` command to download your Kubernetes credentials. This will let you interact with your Okteto Namespaces using Kubernetes-native tools like `kubectl` or `helm`.

## Deploy your Application

Once the credentials have been configured, deploy your applications using your favorite CLI tool.
For example, you could use `kubectl` to deploy our `hello-world` application:

```terminal
kubectl apply -f https://raw.githubusercontent.com/okteto/go-getting-started/master/k8s.yml
```

Okteto is a multi-tenant environment.
A combination of RBAC, pod security policies, resource quotas, network policies, admission controllers, and custom code is put in-place to ensure that Okteto namespaces are isolated, secure, and easy to use for everyone.
[Take a look at this document](/docs/cloud/multitenancy/) to understand the limitations and restrictions most likely to affect your applications in Okteto.
